--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.11.2",
     "aws-amplify": "^6.15.9",
@@ -51,6 +52,7 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.23",
     "@types/node": "^20.19.27",
     "@types/react": "^18",
     "@types/react-dom": "^18",
